force-app/main/default/objects/blng__Invoice__c/fields/blng__PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentStatus__c</fullName>
    <formula>IF(
AND(blng__Balance__c &gt; 0, blng__Payments__c &gt; 0),
&#39;Partially Paid&#39;, IF(blng__Balance__c &gt; 0, &#39;Unpaid&#39;, &#39;Paid&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>