force-app/main/default/objects/blng__Invoice__c/fields/Paid_In_Full_On__c.field-meta.xml
<CustomField>
    <fullName>Paid_In_Full_On__c</fullName>
    <label>Paid In Full On</label>
    <type>DateTime</type>
</CustomField>