force-app/main/default/objects/blng__Invoice__c/fields/Schedule_Renewal_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Renewal_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to generate the renewal opportunity associated with the subscription that was paid for through this invoice.</description>
    <inlineHelpText>Check to generate the renewal opportunity associated with the subscription that was paid for through this invoice.</inlineHelpText>
    <label>Schedule Renewal Forecast</label>
    <type>Checkbox</type>
</CustomField>